css/style.css
@import url("https://fonts.googleapis.com/css2?family=Cousine:wght@400;700&display=swap");

* {
  font-family: "Cousine", monospace;
}

body {
  background-color: #0a373e;
}

.hero {
  background-color: #4a1548;
  padding: 3% 10%;
}

header ul li {
  display: inline-block;
  margin: 3% 10%;
}

header ul li a:hover {
  color: gold !important;
}

.btn-container {
  color: rgb(113, 250, 0);
  margin-top: 5%;
}

.wrapper {
  background-color: #0a373e;
  width: 6em;
  height: 2em;
  border-radius: 2px;
  cursor: pointer;
}

.row:nth-child(2) {
  padding-top: 5%;
}

.col-lg-3 {
  height: 60vh;
  background-position: center;
  background-size: cover;
  border-radius: 5px;
  cursor: pointer;
}

.Thin_crust {
  background-image: url("../assets/Thin_crust.png");
}

.glutten_free {
  background-image: url("../assets/glutten_free.jpg");
}

.toppings {
  background-image: url("../assets/toppings.jpg");
}

.Fruit_topping {
  background-image: url("../assets/Fruit_topping.png");
}

.Onions_topping {
  background-image: url("../assets/Onions_topping.png");
}

.crispy_crust {
  background-image: url("../assets/crispy_crust.jpg");
}

label {
  color: white;
  margin-top: 5%;
}

select {
  width: 80%;
  height: 2em;
  margin-top: 3%;
  cursor: pointer;
  text-align: center;
}

.checkbox {
  width: 80%;
  margin-top: 5%;
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  grid-template-rows: minmax(10%);
}

.checkbox input {
  margin-top: 10px !important;
  transform: scale(1.5);
  cursor: pointer;
}

button {
  width: 80%;
  height: 2.2em;
  background-color: #4a1548;
  color: gold;
  outline: none !important;
  border: none;
  border-radius: 5px;
}

summary {
  gap: 16px;
}

/* order summuray details */

.item_img {
  height: 15vh;
  background-image: url("../assets/Thin_crust.png");
  background-position: center;
  background-size: cover;
  border-radius: 5px;
}

/* place order button */
table {
  border-radius: 7px;
  border: 1px solid #063037;
}

thead tr {
  color: #ffffff;
  border: 1px solid #063037;
}

tbody td {
  color: #f1f1f1;
  font-weight: 400;
}

tfoot tr {
  background-color: #063037;
  color: gold;
}

/*increamenting cart items */
.rounded {
  height: 24px;
  width: 24px;
  background-color: #063037;
  margin: 0 5px;
  display: flex;
  justify-content: center;
  align-items: center;
  cursor: pointer;
}

.btn1 {
  background-color: #4a1548;
  color: gold;
  margin-top: 5%;
}

.btn2 {
  margin-top: 5%;
}

/* delivery prompt */

.delivery_container {
  display: none;
}

@media screen and (max-width: 992px) {
  .one {
    margin-top: -2% !important;
  }
  .row {
    padding: 5%;
  }

  .col-lg-3 {
    margin: 5%;
  }

  .item_img {
    width: 30vw;
  }

  .col_2 {
    width: 15vw;
  }

  .two {
    margin-left: 20px !important;
  }

  .three {
    margin-top: 10%;
  }
}

